<resources>
    <string name="app_name">My Whiteboard Labs</string>
    <string name="notification">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="chat_with_teacher">Chat with teacher</string>
    <string name="logout">Sign Out </string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email_id">Enter email id</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="subjects">Subjects</string>
    <string name="subject">Subject</string>
    <string name="assignments">Assignments</string>
    <string name="exam">Exams</string>
    <string name="my_drive">My Drive</string>
    <string name="drive">Drive</string>
    <string name="shared">Shared</string>
    <string name="answer">Assg. Answers</string>
    <string name="score_card">Score Card</string>
    <string name="my_alert">My Alerts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_this_app">Share This App</string>
    <string name="email_address">Email address</string>
    <string name="topic">Topic</string>
    <string name="connect">Connect</string>
    <string name="my_subject">My Subject</string>
    <string name="teacher">Teacher</string>
    <string name="files">Files</string>
    <string name="my_schedule">My Schedule</string>
    <string name="user_id">User ID</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="share_to_friend">Friends,  \n\nPlease install this App,  I am sure you would enjoy.</string>
    <string name="no_data_found">No data found</string>
    <string name="subject_details">Subject Details</string>
    <string name="my_assignment">My Assignments</string>
    <string name="view_more">View more</string>
    <string name="marks">Marks</string>
    <string name="my_exam">My Exams</string>
    <string name="attach_answer">Attach Answer</string>
    <string name="study_material">Study Material</string>
    <string name="title">Title</string>
    <string name="enter_topic">Enter topic</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_direct_link">Enter direct link</string>
    <string name="upload_new_file">Upload new file</string>
    <string name="submit">Submit</string>
    <string name="add_to_drive">Add to Drive</string>
    <string name="choose_file">Choose file</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change Password</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_instruction">This number will be used for important communications and notifications from school</string>
    <string name="attend">Attend</string>
    <string name="exam_start_title">Your exam will start now</string>
    <string name="exam_start_message">if you do not SUBMIT your answers on time, system will automatically submit your answers at exam end time</string>
    <string name="select_file">Please select file</string>
    <string name="submit_exam_title">Are you sure you want to submit?</string>
    <string name="submit_exam_message">Once you submit your exam you will not be able to give any more answers.</string>
    <string name="exam_min_left_message">You have only 5 minutes left to complete your answers..</string>
    <string name="exam_min_left_second_message">You have only 1 minute left to complete your answers..</string>
    <string name="half_time_over">Half Time Over</string>
    <string name="exam_time_over">TIME OVER!\nYour answers have been submitted successfully.</string>
    <string name="today">Today</string>
    <string name="view_result">Result</string>
    <string name="updload_file_less_than_5mb"><u>Updload File (Less than 5MB)</u></string>
    <string name="open_in_web">Open in Web</string>
    <string name="update">Update</string>
    <string name="update_force_update">To experience new features and enhanced performance please update latest version.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="less">Less</string>
    <string name="ask_me_letter">Ask me Later</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="close">Close</string>
    <string name="file_uploading_starting">File uploading, please wait...</string>
    <string name="image_file_title">Multiple Files</string>
    <string name="other_file_title">Single File</string>
    <string name="try_again_crop">Can not crop image. Please try again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="share_link">Share Link</string>
    <string name="inactive">Inactivate</string>
    <string name="continue_without_attachment">Continue without attachment?</string>
    <string name="multi_line">Multi Line Answer</string>
    <string name="single_line">Single Line Answer</string>
    <string name="no_attachment">No Attachment</string>
    <string name="link">Link</string>
    <string name="upload_file">Upload File</string>
    <string name="file_size_alert">Bigger file(s) selected. </string>
    <string name="max_file_size_allow">Max file size allowed</string>
    <string name="mb">MB.</string>
    <string name="click_to_open">Click to open</string>


</resources>