<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.appforschool.ui.home.fragment.dashboard.DashboardviewModel" />

        <variable
            name="listner"
            type="com.appforschool.ui.home.fragment.dashboard.DashboardFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/colorScheduleBackground"
            android:paddingBottom="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                android:background="@color/colorHomeHeader"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_20sdp"
                android:paddingLeft="@dimen/_20sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_open_nav"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:onClick="@{()-> listner.openHamBurgerMenu()}"/>

                <com.appforschool.utils.circle_imageview.CircularImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/temp_image"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_minus20sdp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="User name"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/colorWhite"
                    android:text="@{viewmodel.userName}"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Standard"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/colorWhite"
                    android:text="@{viewmodel.standard}"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_minus60sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/bg_cardview"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:onClick="@{()-> listner.openScheduleFragment()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_my_schedule" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/schedule"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_cardview"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:onClick="@{()-> listner.openSubjectFragment()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/my_subject" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/subjects"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/bg_cardview"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:onClick="@{()-> listner.openAssignment()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_assignment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/assignments"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_cardview"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:onClick="@{()-> listner.openAlert()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/notification"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:background="@drawable/bg_cardview"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:onClick="@{()-> listner.openExamFragment()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_my_exam" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/exam"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_cardview"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:onClick="@{()-> listner.openDriveFragment()}">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_my_drive" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/my_drive"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</layout>