<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="changePasswordViewModel"
            type="com.appforschool.ui.auth.changepassword.ChangePasswordViewModel" />

        <variable
            name="listner"
            type="com.appforschool.ui.auth.changepassword.ChangePasswordActivity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.changepassword.ChangePasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llHeader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:background="@color/colorHomeHeader"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back_icon"
                    android:onClick="@{()->listner.closeScreen()}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/calibri"
                    android:text="@string/change_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_20ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        hideShowPassword="@{changePasswordViewModel.oldPassworddisplay}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@={changePasswordViewModel.oldPassword}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_dark"
                        android:textSize="@dimen/_15ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:onClick="@{()-> changePasswordViewModel.setOldPasswordVisiblity()}"
                        android:src="@{changePasswordViewModel.oldPassworddisplay ? @drawable/ic_show_password : @drawable/ic_hide_password}"
                        tools:src="@drawable/ic_show_password" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorBlack" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        hideShowPassword="@{changePasswordViewModel.newPassworddisplay}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@={changePasswordViewModel.newPassword}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_dark"
                        android:textSize="@dimen/_15ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:onClick="@{()-> changePasswordViewModel.setNewPasswordVisiblity()}"
                        android:src="@{changePasswordViewModel.newPassworddisplay ? @drawable/ic_show_password : @drawable/ic_hide_password}"
                        tools:src="@drawable/ic_show_password" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorBlack" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">

                    <EditText
                        hideShowPassword="@{changePasswordViewModel.confirmPassworddisplay}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/calibri"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@={changePasswordViewModel.confirmPassword}"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/grey_dark"
                        android:textSize="@dimen/_15ssp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:onClick="@{()-> changePasswordViewModel.setConfirmPasswordVisiblity()}"
                        android:src="@{changePasswordViewModel.confirmPassworddisplay ? @drawable/ic_show_password : @drawable/ic_hide_password}"
                        tools:src="@drawable/ic_show_password" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorBlack" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_login_signup_button"
                    android:fontFamily="@font/calibri"
                    android:gravity="center"
                    android:onClick="@{()->changePasswordViewModel.executeChangePassword()}"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15ssp" />


            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{changePasswordViewModel.isViewLoading().booleanValue() ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>
</layout>